finally fixed all errors of images
for some reason github wasnt finding images inside folder which are nested

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ Ayyaz Patel   : 9403945341 <br>
     <div class="berry_types">
         <div class="mul">
             <h3>Mulberries</h3>
-            <img src="..//images/mulberry1.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/mulberry1.jpg">
         </div>  
         <div class="rasp">
             <h3>Raspberries</h3>
-            <img src="..//images/raspberry1.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/raspberry1.jpg">
         </div>
     </div>
     <hr id="center_line" style="width: 30%; margin-right: 35%;">
@@ -175,87 +175,87 @@ Ayyaz Patel   : 9403945341 <br>
     </div>
     <div class="types">
         <div class="veggy_types">
-            <img src="..//images/veggy/basil.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/basil.jpg">
             <p id="veg_names">Basil</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/belpapers.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/belpapers.jpg">
             <p id="veg_names">Belpapers</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/broccoli.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/broccoli.jpg">
             <p id="veg_names">broccoli</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/capsicum.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/capsicum.jpg">
             <p id="veg_names">Capsicum</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/carrots.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/carrots.jpg">
             <p id="veg_names">Carrots</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/cherrytomaatoes.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/cherrytomaatoes.jpg">
             <p id="veg_names">Cherry Tomatoes</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/chinesecabbage.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/chinesecabbage.jpg">
             <p id="veg_names">Chinese Cabbage</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/frenchbean.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/frenchbean.jpg">
             <p id="veg_names">French Bean</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/gogoberrys.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/gogoberrys.jpg">
             <p id="veg_names">Gogoberrys</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/greenpeas.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/greenpeas.jpg">
             <p id="veg_names">Green Peas</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/iceberglattice.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/iceberglattice.jpg">
             <p id="veg_names">Iceberg lattice</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/jelapenos.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/jelapenos.jpg">
             <p id="veg_names">jelapenos</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/kale.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/kale.jpg">
             <p id="veg_names">Kale</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/lattice.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/lattice.jpg">
             <p id="veg_names">Lattice</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/pokcha.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/pokcha.jpg">
             <p id="veg_names">Pokcha</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/redcabbage.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/redcabbage.jpg">
             <p id="veg_names">Red Cabbage</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/redraddish.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/redraddish.jpg">
             <p id="veg_names">Red Raddish</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/rosemerry.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/rosemerry.jpg">
             <p id="veg_names">Rosemerry</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/sweetcorn.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/sweetcorn.jpg">
             <p id="veg_names">Sweet Corn</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/swisschard.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/swisschard.jpg">
             <p id="veg_names">Swiss Chard</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/veggy/zucchini.jpg">
+            <img src="../megamindnk.github.io-reedafarms/images/zucchini.jpg">
             <p id="veg_names">Zucchini</p>
         </div>
     </div>
