still tryin to change image loading

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ Ayyaz Patel   : 9403945341 <br>
     <div class="berry_types">
         <div class="mul">
             <h3>Mulberries</h3>
-            <img src="..//images/mulberry1.jpg">
+            <img src="images/mulberry1.jpg">
         </div>  
         <div class="rasp">
             <h3>Raspberries</h3>
-            <img src="..//images/raspberry1.jpg">
+            <img src="images/raspberry1.jpg">
         </div>
     </div>
     <hr id="center_line" style="width: 30%; margin-right: 35%;">
@@ -175,87 +175,87 @@ Ayyaz Patel   : 9403945341 <br>
     </div>
     <div class="types">
         <div class="veggy_types">
-            <img src="..//images/basil.jpg">
+            <img src="images/basil.jpg">
             <p id="veg_names">Basil</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/belpapers.jpg">
+            <img src="images/belpapers.jpg">
             <p id="veg_names">Belpapers</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/broccoli.jpg">
+            <img src="images/broccoli.jpg">
             <p id="veg_names">broccoli</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/capsicum.jpg">
+            <img src="images/capsicum.jpg">
             <p id="veg_names">Capsicum</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/carrots.jpg">
+            <img src="images/carrots.jpg">
             <p id="veg_names">Carrots</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/cherrytomaatoes.jpg">
+            <img src="images/cherrytomaatoes.jpg">
             <p id="veg_names">Cherry Tomatoes</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/chinesecabbage.jpg">
+            <img src="images/chinesecabbage.jpg">
             <p id="veg_names">Chinese Cabbage</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/frenchbean.jpg">
+            <img src="images/frenchbean.jpg">
             <p id="veg_names">French Bean</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/gogoberrys.jpg">
+            <img src="images/gogoberrys.jpg">
             <p id="veg_names">Gogoberrys</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/greenpeas.jpg">
+            <img src="images/greenpeas.jpg">
             <p id="veg_names">Green Peas</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/iceberglattice.jpg">
+            <img src="images/iceberglattice.jpg">
             <p id="veg_names">Iceberg lattice</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/jelapenos.jpg">
+            <img src="images/jelapenos.jpg">
             <p id="veg_names">jelapenos</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/kale.jpg">
+            <img src="images/kale.jpg">
             <p id="veg_names">Kale</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/lattice.jpg">
+            <img src="images/lattice.jpg">
             <p id="veg_names">Lattice</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/pokcha.jpg">
+            <img src="images/pokcha.jpg">
             <p id="veg_names">Pokcha</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/redcabbage.jpg">
+            <img src="images/redcabbage.jpg">
             <p id="veg_names">Red Cabbage</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/redraddish.jpg">
+            <img src="images/redraddish.jpg">
             <p id="veg_names">Red Raddish</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/rosemerry.jpg">
+            <img src="images/rosemerry.jpg">
             <p id="veg_names">Rosemerry</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/sweetcorn.jpg">
+            <img src="images/sweetcorn.jpg">
             <p id="veg_names">Sweet Corn</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/swisschard.jpg">
+            <img src="images/swisschard.jpg">
             <p id="veg_names">Swiss Chard</p>
         </div>
         <div class="veggy_types">
-            <img src="..//images/zucchini.jpg">
+            <img src="images/zucchini.jpg">
             <p id="veg_names">Zucchini</p>
         </div>
     </div>
