added gojiberry in berry section
fixed some glitches and added a word to tilte

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="rida.css">
     <!--google fonts-->
-    <link href='//fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,700&display=swap" rel="stylesheet">
 
@@ -31,7 +31,7 @@
 
     <div class="heading">
         <h1>
-            <i class="fa fa-leaf"></i>  Reeda <span class="sub">farms </span> <sub class="subscript">(mahabaleshwar)</sub> 
+            <i class="fa fa-leaf"></i>  Reeda <span class="sub">Dream  farm</span> <sub class="subscript">(mahabaleshwar)</sub> 
         </h1>
     </div>
 
@@ -133,9 +133,13 @@ Ayyaz Patel   : 9403945341 <br>
 <section id="berry">
     <h2>Berries</h2>
     <div class="descrip">
-     We sell two types of mouth-watering berries 
+     We sell three types of mouth-watering berries 
     <li>Mulberry</li>
     <li>Raspberry</li>
+    <li>Gojiberry</li>
+    </div>
+    <div class="placeinfo">
+        click on each berry to get their information
     </div>
     <div class="berry_types">
         <div class="mul">
@@ -145,6 +149,10 @@ Ayyaz Patel   : 9403945341 <br>
         <div class="rasp">
             <h3>Raspberries</h3>
             <img src="images/raspberry1.jpg">
+        </div>
+        <div class="gogo">
+            <h3>Gojiberrys</h3>
+            <img src="images/gogoberrys.jpg">
         </div>
     </div>
     <hr id="center_line" style="width: 30%; margin-right: 35%;">
@@ -159,10 +167,15 @@ Ayyaz Patel   : 9403945341 <br>
         <li>Raspberry originates from Turkey.
         <li>Raspberries are excellent source of dietary fibers, vitamins C, E and B9 (folic acid) and minerals such as manganese and magnesium
         <li>Raspberries can be consumed fresh or as ingredient of breakfast cereals, ice-creams, milkshakes and various cakes, juices, jams and jellies.
-        <li>Phytonutrients from the raspberries can be effective in treatment of the high blood pressure and inflammation of the joints.
-        They also act beneficially on the function of liver.
+        <li>Raspberries can be effective in treatment of the high blood pressure and inflammation of the joints.They also act beneficially on the function of liver.
     </div>
-    </div>
+    <div class="gogoinfo">
+        <li>Goji berries as a medicinal plant has roots in ancient China. 
+        <li>Many people use goji berries to treat eye, liver, and kidney issues.
+        <li>Also known as wolfberries, these festive red berries have a sweet, slightly sour taste.
+        <li>They often come in dried form, like raisins.
+    </div>    
+</div>
 </section>
 
 
@@ -206,10 +219,7 @@ Ayyaz Patel   : 9403945341 <br>
             <img src="images/frenchbean.jpg">
             <p id="veg_names">French Bean</p>
         </div>
-        <div class="veggy_types">
-            <img src="images/gogoberrys.jpg">
-            <p id="veg_names">Gogoberrys</p>
-        </div>
+
         <div class="veggy_types">
             <img src="images/greenpeas.jpg">
             <p id="veg_names">Green Peas</p>
@@ -263,6 +273,6 @@ Ayyaz Patel   : 9403945341 <br>
 </section>
 
 
-<footer>  &copy; <span id="foot"> <a href="megamind.github.io"> MegaMind</a></span></footer> 
+<footer>  &copy; <span id="foot"> <a href="https://megamindnk.github.io" target="_blank"> MegaMind</a></span> (2020)</footer> 
 <script src="farm.js" ></script>
 </html>
